gen/v24.2/rpk/rpk-topic-describe.adoc
= rpk topic describe
:description: rpk topic describe

Describe topics.

This command prints detailed information about topics. The output contains
up to three sections: a summary of the topic, the topic configs, and a detailed
partitions section. By default, the summary and configs sections are printed.

The --regex flag (-r) parses arguments as regular expressions
and describes topics that match any of the expressions.

For example,

    describe foo bar            # describe topics foo and bar
    describe -r '^f.*' '.*r$'   # describe any topic starting with f and any topics ending in r
    describe -r '*'             # describe all topics
    describe -r .               # describe any one-character topics

== Usage

[,bash]
----
rpk topic describe [TOPICS] [flags]
----

== Aliases

[,bash]
----
describe, info
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for describe.

|-a, --print-all |- |Print all sections.

|-c, --print-configs |- |Print the config section.

|-p, --print-partitions |- |Print the detailed partitions section.

|-s, --print-summary |- |Print the summary section.

|-r, --regex |- |Parse arguments as regex; describe any topic that matches any input topic expression.

|--stable |- |Include the stable offsets column in the partitions section; only relevant if you produce to this topic transactionally.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===